--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Create GitHub release
-      run: |
-        gh release create "${{ github.run_number }}" \
-          --title "${{ github.run_number }}"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -36,66 +31,94 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
+    - name: Build back-end project
+      run: |
+        dotnet build be --property:Revision=${{ github.run_number }}
+        version=$(dotnet run --project be --no-build -- --version)
+        version="${version%%+*}" # Strip the build metadata (Git commit SHA)
+        echo "RELEASE_VERSION=$version" >> $GITHUB_ENV
+        echo "Set RELEASE_VERSION to $version"
+
+    - name: Pack and push .NET tool
+      run: |
+        dotnet pack be --property:Revision=${{ github.run_number }} --output ./nupkg
+        dotnet nuget push ./nupkg/*.nupkg \
+          --api-key ${{ secrets.NUGET_API_KEY }} \
+          --source https://api.nuget.org/v3/index.json
+
+    - name: Create draft GitHub release
+      run: |
+        gh release create "${{ env.RELEASE_VERSION }}" \
+          --title "${{ env.RELEASE_VERSION }}" \
+          --draft
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Publish back-end project for Windows x64
       run: |
-        dotnet publish be --runtime win-x64
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime win-x64
         zip -j win-x64.zip be/bin/Release/net8.0/win-x64/publish/qm.exe
-        gh release upload "${{ github.run_number }}" win-x64.zip
+        gh release upload "${{ env.RELEASE_VERSION }}" win-x64.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for Windows x86
       run: |
-        dotnet publish be --runtime win-x86
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime win-x86
         zip -j win-x86.zip be/bin/Release/net8.0/win-x86/publish/qm.exe
-        gh release upload "${{ github.run_number }}" win-x86.zip
+        gh release upload "${{ env.RELEASE_VERSION }}" win-x86.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for Windows ARM64
       run: |
-        dotnet publish be --runtime win-arm64
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime win-arm64
         zip -j win-arm64.zip be/bin/Release/net8.0/win-arm64/publish/qm.exe
-        gh release upload "${{ github.run_number }}" win-arm64.zip
+        gh release upload "${{ env.RELEASE_VERSION }}" win-arm64.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for macOS x64
       run: |
-        dotnet publish be --runtime osx-x64
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime osx-x64
         tar -czvf osx-x64.tar.gz -C be/bin/Release/net8.0/osx-x64/publish qm
-        gh release upload "${{ github.run_number }}" osx-x64.tar.gz
+        gh release upload "${{ env.RELEASE_VERSION }}" osx-x64.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for macOS ARM64
       run: |
-        dotnet publish be --runtime osx-arm64
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime osx-arm64
         tar -czvf osx-arm64.tar.gz -C be/bin/Release/net8.0/osx-arm64/publish qm
-        gh release upload "${{ github.run_number }}" osx-arm64.tar.gz
+        gh release upload "${{ env.RELEASE_VERSION }}" osx-arm64.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for Linux x64
       run: |
-        dotnet publish be --runtime linux-x64
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime linux-x64
         tar -czvf linux-x64.tar.gz -C be/bin/Release/net8.0/linux-x64/publish qm
-        gh release upload "${{ github.run_number }}" linux-x64.tar.gz
+        gh release upload "${{ env.RELEASE_VERSION }}" linux-x64.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for Linux ARM
       run: |
-        dotnet publish be --runtime linux-arm
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime linux-arm
         tar -czvf linux-arm.tar.gz -C be/bin/Release/net8.0/linux-arm/publish qm
-        gh release upload "${{ github.run_number }}" linux-arm.tar.gz
+        gh release upload "${{ env.RELEASE_VERSION }}" linux-arm.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish back-end project for Linux ARM64
       run: |
-        dotnet publish be --runtime linux-arm64
+        dotnet publish be --property:Revision=${{ github.run_number }} --runtime linux-arm64
         tar -czvf linux-arm64.tar.gz -C be/bin/Release/net8.0/linux-arm64/publish qm
-        gh release upload "${{ github.run_number }}" linux-arm64.tar.gz
+        gh release upload "${{ env.RELEASE_VERSION }}" linux-arm64.tar.gz
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Publish release
+      run: gh release edit "${{ env.RELEASE_VERSION }}" --draft=false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
